# proxai

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  README_CN.md  cliff.toml  config.example.toml  justfile  lefthook.yml  pixi.toml  pyrightconfig.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
docs/: agent-guidelines.md  anthropic-messages-protocol.html  configuration.md  configuration_cn.md  error-handling-cn.md  protocol-anthropic-messages.md  protocol-conversion.md  protocol-conversion_cn.md  protocol-openai-chat-completions.md  protocol-openai-responses.md  protocols-overview.md  provider-infrastructure-plan.md  streaming-response-handling-cn.md  sub2api-system-role-issue.md
examples/: serde_tag_demo.rs  test_upstream.rs
scripts/: check_release_tag_version.py  generate_release_notes.py  loc.py  polish_release_notes.py  probe_model_limits.py
site/: .gitignore  README.md  astro.config.mjs  justfile  netlify.toml  package.json
src/: config.rs  config_tests.rs  diagnostics.rs  error.rs  formatting.rs  http_model.rs  http_utils.rs  lib.rs  main.rs  normalize.rs  paths.rs  paths_tests.rs  request.rs  sse.rs  sse_tests.rs  upstream.rs
src/capture/: controller.rs  mod.rs  model.rs  tests.rs  write.rs
src/cli/: cli_tests.rs  mod.rs
src/diagnostics/: mod.rs
src/error/: config.rs  internal.rs  mod.rs  render.rs  render_tests.rs  request.rs  upstream.rs
src/http_support/: content_type.rs  header.rs  mod.rs  response.rs  stream.rs
src/ingress/: mod.rs  request.rs
src/logging/: anthropic_messages.rs  counts_tests.rs  human.rs  human_tests.rs  mod.rs  openai_chat_completions.rs  openai_chat_completions_tests.rs  openai_responses.rs  openai_responses_tests.rs  output_alias.rs  record.rs  tool_alias.rs  upstream.rs
src/mcp/: mod.rs
src/observe/: context.rs  inbound.rs  mod.rs  outbound.rs  point.rs  provider.rs  sinks.rs  upstream.rs
src/pipeline/: inbound.rs  mod.rs  provider_request.rs  provider_response.rs  run.rs  upstream_response.rs
tests/: live_config.rs  protocol_wire.rs  proxy_e2e.rs
tools/: check_docs_i18n.py  compare_anthropic_protocol.py  compare_openai_protocol.py  zed_probe_server.py
(+530 files in other folders)
